# tide

./: .gitignore  LICENSE  README.md
tide/: Cargo.toml  README.md
tide/src/: application.rs  file_system.rs  input.rs  main.rs  popup_menu.rs  search.rs  search_menu.rs  shell.rs
tide/src/search/: menu.rs  mod.rs
tidy/: Cargo.toml
tidy/src/: main.rs
