[package]
name = "tide"
version = "0.3.4"
description = "Terminal-based IDE"
license = "MIT"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.102"
bstr = "1.12.1"
color-eyre = "0.6.3"
crc64 = "2.0.0"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
nucleo = "0.5.0"
pathdiff = "0.2.3"
portable-pty = "0.9.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] } 
ratatui-code-editor = "0.0.6"
ratatui-textarea = "0.9.1"
rayon = "1.12.0"
walkdir = "2.5.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
