[package]
name = "tidy"
version = "0.1.0"
description = "Terminal-based IDE"
authors = ["Jamie Keeling <jakeeling5@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
color-eyre = "0.6.3"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
tui-input = "0.15.3"
walkdir = "2.5.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
